# TooDee

./: .gitignore  CMakeLists.txt  README.md
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: Default.glsl  FlatColor.glsl  FlatColorTest.glsl  Texture.glsl  TextureTest.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  SandboxApp.cpp
TooDee/: CMakeLists.txt  TooDee.h
TooDee/Core/: Application.cpp  Application.h  Assert.h  Base.h  CMakeLists.txt  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  TimeStep.h  Timer.h  Window.cpp  Window.h
TooDee/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h
TooDee/ImGui/: CMakeLists.txt  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
TooDee/Platform/: CMakeLists.txt
TooDee/Platform/MacOS/: CMakeLists.txt  MacOSWindow.cpp  MacOSWindow.h
TooDee/Platform/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
TooDee/Platform/Win32/: CMakeLists.txt  Win32Input.cpp  Win32PlatformUtils.cpp  Win32Window.cpp  Win32Window.h
TooDee/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
TooDee/Utils/: CMakeLists.txt  PlatformUtils.h
scripts/: build  build.ps1  setup  setup.ps1
